name:                TorScraper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/TorScraper#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable TorScraper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 ,
                       http-client ,
                       network ,
                       network-uri ,
                       scalpel ,
                       transformers ,
                       persistent ,
                       mtl ,
                       resourcet ,
                       monad-logger ,
                       persistent-sqlite ,
                       options ,
                       time ,
                       command ,
                       aeson ,
                       random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
